--- a/ui/index.html
+++ b/ui/index.html
@@ -2,12 +2,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
         body { margin: 0; padding: 20px; }
-        #logo { position: absolute; top: 0; right: 0; opacity: 1; padding: unset; margin: unset; }
+        #alerta_defcon { position: absolute; top: 0; right: 0; opacity: 1; padding: unset; margin: unset; }
     </style>
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <div id="logo"> <img id="img" src="./img/alerta_verde.png"> </div>
+    <div id="alerta_defcon"> <img id="defcon" src="./img/alerta_verde.png"> </div>
 </body>
