--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
         body { margin: 0; padding: 20px; }
-        #alerta_defcon { position: absolute; top: 0; right: 0; opacity: 1; padding: unset; margin: unset; }
+        #alerta_defcon { position: absolute; top: 10px; right: 10px; opacity: 1; padding: unset; margin: unset; }
+        img#defcon { width: 200px; }
     </style>
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <script src="./script.js" type="text/javascript"></script>
